--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,14 +4,16 @@
 
     <a href="https://github.com/GeoMop/GeoMop" class="button fork">Fork On GitHub</a>
     <div class="downloads">
-      <span>Downloads:</span>
+      <span>Download</span>
       <ul class="ng--binding" ng-cloak>
 
         <li><a href="{$ versionRoot $}/geomop_{$ version $}-1_all.deb" target="_blank" class="button">
+          <i class="fa fa-linux" aria-hidden="true"></i>
           Linux installer <b>{$ version $}</b>
         </a></li>
 
         <li><a href="{$ versionRoot $}/geomop_{$ version $}-1_all.deb" target="_blank" class="button">
+          <i class="fa fa-windows" aria-hidden="true"></i>
           Windows installer <b>{$ version $}</b>
         </a></li>
       </ul>
