--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -130,6 +130,9 @@ nav hr {
   width: 50px;
   display: inline-block;
 }
+nav select {
+  height: 1.5rem;
+}
 blockquote {
   border-left: 1px solid rgba(0,0,0,.1);
 }
