--- a/_includes/members.html
+++ b/_includes/members.html
@@ -1,19 +1,16 @@
-
-<h2>Developers</h2>
+{% for group in site.data.members %}
+<h2>{{ group.section }}</h2>
 <div class="member-list">
-{% for member in site.data.members.developers %}
+  {% for member in group.users %}
+    {% if member.name %}
     <a class="gravatar" data-gravatar="{{ member.email }}" href="https://github.com/{{ member.github }}" target="_blank">
         {{ member.name }}
     </a>
-{% endfor %}
-</div>
-
-
-<h2>Testers</h2>
-<div class="member-list">
-{% for member in site.data.members.mentions %}
+    {% else %}
     <span class="gravatar-mention">
         {{ member }}
     </span>
-{% endfor %}
+    {% endif %}
+  {% endfor %}
 </div>
+{% endfor %}
