Fix Windows link

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,7 +12,7 @@
           Linux installer <b>{$ version $}</b>
         </a></li>
 
-        <li><a href="{$ versionRoot $}/geomop_{$ version $}-1_all.deb" target="_blank" class="button">
+        <li><a href="{$ versionRoot $}/geomop_{$ version $}_x86.exe" target="_blank" class="button">
           <i class="fa fa-windows" aria-hidden="true"></i>
           Windows installer <b>{$ version $}</b>
         </a></li>
