--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -9,12 +9,12 @@
 
         <li><a href="{$ versionRoot $}/geomop_{$ version $}-1_all.deb" target="_blank" class="button">
           <i class="fa fa-linux" aria-hidden="true"></i>
-          Linux installer <b>{$ version $}</b>
+          <span>Linux installer <b>{$ version $}</b></span>
         </a></li>
 
         <li><a href="{$ versionRoot $}/geomop_{$ version $}_x86.exe" target="_blank" class="button">
           <i class="fa fa-windows" aria-hidden="true"></i>
-          Windows installer <b>{$ version $}</b>
+          <span>Windows installer <b>{$ version $}</b></span>
         </a></li>
       </ul>
     </div>
