--- a/_includes/page-nav.html
+++ b/_includes/page-nav.html
@@ -26,7 +26,7 @@
         </a>
       </li>
       <li ng-show="item.visible.manual">
-        <a href="{$ versionRoot $}/{$ documentation_relative $}" target="_blank" title="reference guide in PDF format">
+        <a href="{$ versionRoot $}/{$ option.documentation_relative $}" target="_blank" title="reference guide in PDF format">
           reference guide
           <i class="text-danger fa fa-file-pdf-o" alt="PDF format" aria-hidden="true"></i>
         </a>
